nullaway_error_3D3674B9-E12A-4043-96DB-46AA37A34960.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-orm/src/main/java/org/springframework/orm/hibernate5/HibernateJdbcException.java:53: error: [NullAway] dereferenced expression ((JDBCException) getCause()) is @Nullable
		return ((JDBCException) getCause()).getSQL();
		                                   ^
    (see http://t.uber.com/nullaway )
